--- a/admin-update-article.html
+++ b/admin-update-article.html
@@ -147,7 +147,7 @@
                                             required value="title"
                                         />    
                                     </div>
-                                    <button class="btn btn-danger mb-3 RandomButtonCSS">Random ảnh</button>
+                                    <button class="btn btn-danger mb-3 RandomButtonCSS" id="createArticle">Random ảnh</button>
                                     <div class="form-grp">
                                         <select class="form-select" id="category_id" name="category_id">
                                             <option selected>Chọn danh mục</option>
@@ -172,7 +172,7 @@
                                     <div class="form-grp">
                                         <textarea name="content"  placeholder="Content*" id="content">Nội dung chính</textarea>
                                     </div>
-                                    <button type="submit" class="btn btn-two RandomButtonCSS" id="createArticle">Tạo bài viết</button>
+                                    <button type="submit" class="btn btn-two RandomButtonCSS">Cập nhật bài viết</button>
                                 </form>
                                 <p class="ajax-response mb-0"></p>
                             </div>
